<resources>
    <string name="app_name">Foodo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_signIn">Sign In</string>
    <string name="app_slogan">We care always</string>
    <string name="testButton">Login</string>
    <string name="add_item">Add Item</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="add_pickupDetails">Add pickup details</string>
    <string name="set_location">Set location</string>
    <string name="submit">Submit</string>
    <string name="categorySpinner">Set category</string>
    <string name="expireSpinner">Expire within</string>
    <string name="food_item_description">Food Item</string>
    <string name="name_of_item">Name of Item</string>
    <string name="donor_name">Donor Name</string>
    <string name="added_time">Added Time</string>
    <string name="item_likes">Likes</string>
    <string name="deliver">As a Deliver</string>
    <string name="donator">As a Donator</string>
    <string name="consumer">Consumer</string>
    <string name="request">Request this Item</string>
    <string name="foodItemImage">foodItemImage</string>
    <string name="item_description">Description</string>
    <string name="item_pickupDetails">Pickup Details</string>
    <string name="item_category">Category</string>
    <string name="item_uploadLocation">Upload Location</string>
    <string name="item_expireTime">Expire Time</string>
    <string name="item_uploadTime">Upload Time</string>
    <string name="item_title">Item Title</string>
    <string name="delete">Delete Item</string>
    <string name="edit">Edit Details</string>
    <string name="donations">Donations</string>
    <string name="add_email">Email</string>
    <string name="add_password">Password</string>
    <string name="signup_text">Don\'t have account? Sign Up</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="app_logo">App Logo</string>
    <string name="tapOnPhoto">Tap on photo to choose profile picture</string>
    <string name="add_username">Enter User Name</string>
    <string name="add_phoneNumber">Enter Phone Number</string>
    <string name="set_currentLocation">Set location or system will get current location</string>
    <string name="save">Save</string>
    <string name="profileImage">Profile Image</string>
    <string name="google_signUp">Sign Up with Google</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string-array name="category_array">
        <item>Snacks</item>
        <item>Bakery</item>
        <item>Rice and Curry</item>
        <item>Drinks</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Deserts</item>
    </string-array>
    <string-array name="expire_array">
        <item>within 30 minutes</item>
        <item>within 1 hour</item>
        <item>within 2 hour</item>
        <item>within 3 hour</item>
        <item>within 4 hour</item>
        <item>within 5 hour</item>
        <item>within 12 hour</item>
        <item>within 1 day</item>
        <item>within 2 day</item>
    </string-array>
    <string name="title_activity_location">Map</string>
    <string name="goToPlace">Go</string>
    <string name="add_place">Add Place</string>
    <string name="map_none">None</string>
    <string name="map_normal">Normal</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="typingMessage">Type a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
