<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#e0e0e0"
        android:id="@+id/menu_card">

        <TextView
            android:id="@+id/item_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:text="@string/name_of_item"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"/>

            <ImageView
                android:id="@+id/item_image"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/food_item_description"
                android:layout_margin="25dp"/>

        <TextView
            android:id="@+id/item_category"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:text="@string/donor_name"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"/>

        <TextView
            android:id="@+id/item_time"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:text="@string/added_time"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_likes"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:text="@string/item_likes"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>