<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="@dimen/padding_regular">

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/colorPrimary" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tapOnPhoto"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/fooditem"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profileImage"/>
            <ImageButton
                android:id="@+id/cameraBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_menu_camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>

            <ProgressBar
                android:id="@+id/progressBarProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_username">

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_phoneNumber">

            <EditText
                android:id="@+id/editTextUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewSetLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="15dp"
            android:text="@string/set_currentLocation"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_location"/>

        <!--<TextView-->
            <!--android:id="@+id/textViewVerified"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="Verified"-->
            <!--android:textStyle="bold"-->
            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />-->

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button_solid"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:text="@string/save"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>
