<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fooditem"/>

                <ImageButton
                    android:id="@+id/fileButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_folder_open"
                    android:layout_alignParentEnd="true" />

                <ImageButton
                    android:id="@+id/cameraButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_menu_camera"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/titleWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/add_title"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/add_description"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/pickupWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/add_pickupDetails"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <EditText
                    android:id="@+id/pickupDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:inputType="text"/>



            </android.support.design.widget.TextInputLayout>

        <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:prompt="@string/categorySpinner"
                android:entries="@array/category_array">

            </Spinner>

        <Spinner
                android:id="@+id/expiration"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:prompt="@string/expireSpinner"
                android:entries="@array/expire_array">

            </Spinner>

        <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/set_location"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_location"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:gravity="center"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorHighlight"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="40dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

</ScrollView>
