<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/app_logo"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_email">

                <EditText
                    android:id="@+id/loginTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_password">

                <EditText
                    android:id="@+id/loginTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_transparent"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/glogin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button_transparent"/>

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/signup_text"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>